sre/infrastructure/kubernetes/flask-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: download-deploy
  namespace: visma
spec:
  selector:
    matchLabels:
      app: download-app
  replicas: 1
  template:
    metadata:
      labels:
        app: download-app
    spec:
      containers:
      - name: download-app
        image: maurobaraldi/download-service
        ports:
          - containerPort: 80
        resources:
          requests:
            cpu: "500m"
            memory: "500M"
          limits:
            cpu: "1"
            memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: download-service
  namespace: visma
  labels:
    app: download-app
spec:
  type: LoadBalancer
  ports:
  - port: 81
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: download-app
